# LearnOpenGL

./: .gitignore  1.2.着色器.三角形.cc  1_3_triangles.cc  1_two_vaos_two_shaders.cc  3.纹理.cc  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  colors.fs  colors.vs  light_cube.fs  main.cc  myLearnOpenGL  readme.md
0-Gettings-Started/Coordinate/: main.cc
0-Gettings-Started/Hello-Triangle/: 1-two-triangles.cc
0-Gettings-Started/Textures/: 0-container-face.cc  0-container.cc
0-Gettings-Started/Transformations/: 0-1-container.cc  1-2-container-rotate-scale.cc
0-Gettings-Started/camera/base/: main.cc
0-Gettings-Started/camera/class/: main.cc
1-Lighting/Colors/: main.cc  object.fs
1_camera/: main.cc
1_camera_mouse/: main.cc
1_coordinate/: main.cc
1_texture_change_mix/: change_mix_value.cc
1_texture_combines/: 1_texture_combined.cc
1_transformation_2_object_rotate_scale/: main.cc
1_transformations/: main.cc
configuration/: root_directory.h  root_directory.h.in
glad/include/glad/: glad.h
glad/src/: glad.c
glfw-3.3.4/: cmake_uninstall.cmake  install_manifest.txt
glfw-3.3.4/lib/Windows/: glfw3.lib
glfw-3.3.4/src/: glfw3.pc
include/: SOIL.h  filesystem.h  shader_m.h  shader_s.h
